sudah bisa interact sama television sama update infobox

--- a/style.css
+++ b/style.css
@@ -50,3 +50,98 @@
     margin: 10px;
     border-radius: 10px;
 }
+
+/* UNTUK ALERT BOX */
+.alert {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    z-index: 9999;
+    padding: 15px;
+    border-radius: 4px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    font-size: 24px;
+    opacity: 0;
+    transform: translateY(-20px);
+    animation: fadeIn 0.3s ease-in-out forwards, fadeOut 0.3s ease-in-out 1.7s forwards;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    100% {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+}
+
+.alert-success {
+    color: #155724;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+}
+
+.alert-info {
+    color: #0c5460;
+    background-color: #d1ecf1;
+    border-color: #bee5eb;
+}
+
+.alert-warning {
+    color: #856404;
+    background-color: #fff3cd;
+    border-color: #ffeeba;
+}
+
+.alert-danger {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+}
+
+
+/* information css */
+.mainInfoBox {
+    color: white;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    background-color: rgb(16, 20, 41);
+    padding: 20px;
+    border: 5px white solid;
+    border-radius: 20px;
+}
+
+.mainInfoText {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.interactTrue {
+    background-color: rgb(50, 102, 201);
+    padding: 10px;
+    border-radius: 10px;
+}
+.interactFalse {
+    background-color: rgb(231, 106, 106);
+    padding: 10px;
+    border-radius: 10px;
+}
