--- a/style.css
+++ b/style.css
@@ -145,3 +145,34 @@
     padding: 10px;
     border-radius: 10px;
 }
+
+.inventory-container {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 10px;
+    border-top-right-radius: 10px;
+}
+
+.inventory-box {
+    width: 50px;
+    height: 50px;
+    margin: 5px 0;
+    border: 2px solid #fff;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.inventory-box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.highlight {
+    border: 5px solid white !important;
+}
